--- a/exercicios/ex022/style.css
+++ b/exercicios/ex022/style.css
@@ -2,16 +2,17 @@ body{
     background-color: rgb(19, 18, 18);
 }
 
+
 h1{
     color: white;
     font-size: 25pt;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-div{
-    width: 350px;
-    height: 350px;
-    line-height: 350px;
+.one{
+    width: 250px;
+    height: 250px;
+    line-height: 250px;
     text-align: center;
     margin: auto;
     border-radius: 25px;
@@ -26,4 +27,5 @@ div{
 .minha-div.hide{
     opacity: 0;
     transition: opacity 1s ease-out;
-}
+};
+
